objects/ASI_HK_CRM_ThresholdValues__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>All threshold values for HK CRM</description>
    <fields>
        <fullName>ASI_HK_CRM_PAF_FOC_Bulk_Min_Buy__c</fullName>
        <description>Minimum number of buy value for FOC bulk</description>
        <inlineHelpText>Minimum number of buy value for FOC bulk</inlineHelpText>
        <label>PAF: FOC Bulk Min. Buy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_PAF_Investment_Amount__c</fullName>
        <inlineHelpText>Total threshold investment amount of Pre-Approval Form</inlineHelpText>
        <label>PAF: Investment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_PAF_Investment_Percent__c</fullName>
        <description>Threshold percentage of total investment value for Pre-Approval Form</description>
        <inlineHelpText>Threshold percentage of total investment value for Pre-Approval Form</inlineHelpText>
        <label>PAF: Investment %</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SO_Amount_Level_1__c</fullName>
        <inlineHelpText>The level 1 amount which results in different approval flow</inlineHelpText>
        <label>SO: Amount Level 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SO_Amount_Level_2__c</fullName>
        <inlineHelpText>The level 2 amount which results in different approval flow</inlineHelpText>
        <label>SO: Amount Level 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SO_Max_Num_of_Urgent_Order__c</fullName>
        <label>SO: Max No. of Urgent Orders</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SO_Min_Order_Amount__c</fullName>
        <description>Min required amount of sales order</description>
        <inlineHelpText>Min required amount of sales order</inlineHelpText>
        <label>SO: Min Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SO_Urgent_Cutoff_Time_1__c</fullName>
        <defaultValue>&apos;00:00&apos;</defaultValue>
        <description>The cut-off time of urgent order limit</description>
        <inlineHelpText>Format: hh:mm</inlineHelpText>
        <label>SO: Urgent Order Cut-off Time 1 (GMT)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SO_Urgent_Cutoff_Time_2__c</fullName>
        <label>SO: Urgent Order Cut-off Time 2 (GMT)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Threshold Values (HK CRM)</label>
</CustomObject>